That's what it would look like.  Alas, drag and drop is elusive

--- a/Avalonia/Avalonia/Drophash.Avalonia/Strings.resx
+++ b/Avalonia/Avalonia/Drophash.Avalonia/Strings.resx
@@ -161,4 +161,7 @@ THE SOFTWARE.</value>
   <data name="Close" xml:space="preserve">
     <value>Close</value>
   </data>
+  <data name="Drop" xml:space="preserve">
+    <value>Drop Zone</value>
+  </data>
 </root>
